# adb

./: .gitignore  Makefile  README.md  WORKSPACE  snapcraft.yaml
bazel/: mdb.bzl
core/: BUILD.bazel
core/adb/: BUILD  adb.c  usb_vendors.c
core/adbd/: adb_auth_client.c
core/ds2/Headers/DebugServer2/Utils/: Daemon.h
core/gdbserver/: .gitignore  BUILD
core/gdbserver/include/gdb-server/: GdbServer.hpp
core/gdbserver/src/: Utils.cpp
core/include/log/: log.h
core/include/selinux/: android.h
core/libcutils/: BUILD  android_reboot.c
core/stubs/: selinux.c
debian/: android-tools-adb.postinst  android-tools-adbd.install  android-tools-adbd.upstart  changelog  control  rules
debian/makefiles/: adb.mk  adbd.mk  ext4_utils.mk  fastboot.mk
debian/patches/: 0001-core-adb-add-vendor-ids-for-bq-and-meizu.patch  0001-core-extras-necessary-changes-to-get-5.1.1-properly-.patch  series
example/trace/stm32/: stm32f10x.h
mlink/etm/: BUILD
mlink/src/win32/getopt/: getopt.c  getopt.h
port/jtag/: mingw64-build.bat
